--- a/css/styles.css
+++ b/css/styles.css
@@ -12,9 +12,12 @@ bg comands #F5F4FA */
 
 /* footer colors */
 /* contects rgba(255,255,255,0.6)
-bg #2F303A */ */
+bg #2F303A */
 
 /* fonts
 
 Roboto 400, 500, 700, 900
 Raleway 700,*/
+
+/* font-family: 'Raleway', sans-serif;
+font-family: 'Roboto', sans-serif; */
