--- a/css/styles.css
+++ b/css/styles.css
@@ -8,16 +8,104 @@ contacts #757575
 button-hover: #188CE8
 button-#2196F3
 bg-#2F303A
-bg comands #F5F4FA */
+bg team #F5F4FA */
 
 /* footer colors */
-/* contects rgba(255,255,255,0.6)
+/* contacts rgba(255,255,255,0.6)
 bg #2F303A */
-
-/* fonts
-
-Roboto 400, 500, 700, 900
-Raleway 700,*/
 
 /* font-family: 'Raleway', sans-serif;
 font-family: 'Roboto', sans-serif; */
+
+:root {
+  --primery-text-color: #757575;
+  --secondary-text-color: #212121;
+  --light-color: #ffffff;
+  --stile-text-color: rgba(255, 255, 255, 0.6);
+  --accent-color: #2196f3;
+  --btn-hover: #188ce8;
+  --primery-bg-color: #e5e5e5;
+  --secondary-bg-color: #f5f4fa;
+  --dark-bg-color: #2f303a;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  background-color: var(--light-color);
+}
+
+/* Общие стили */
+.link {
+  text-decoration: none;
+}
+
+.link:hover,
+.link:focus {
+  color: var(--accent-color);
+  cursor: pointer;
+}
+
+.list {
+  list-style: none;
+}
+
+/* Хедер */
+.logo {
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 1.19;
+  color: #000000;
+}
+
+.logo-accent {
+  color: var(--accent-color);
+}
+
+.nav-item,
+.header-contacts-list {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--secondary-text-color);
+}
+
+.header-contacts-link {
+  color: var(--primery-text-color);
+}
+
+/* Герой */
+.hero {
+  background: var(--dark-bg-color);
+}
+
+.hero-title {
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--light-color);
+}
+
+.hero-link {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--light-color);
+  background: var(--accent-color);
+}
+
+.hero-link:hover,
+.hero-link:focus {
+  background-color: var(--btn-hover);
+}
